workloads.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
spec:
  selector:
    matchLabels:
      app: express
  replicas: 1
  template: 
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: phongsakorn/server-express:1.0
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  selector:
    matchLabels:
      app: fastapi
  replicas: 1
  template: 
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: phongsakorn/server-fastapi:1.0
