services.yaml
apiVersion: v1
kind: Service
metadata:
  name: express

spec:
 
  selector:
    app: express

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi

spec:
  
  selector:
    app: fastapi

  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
